feat: refactor PersonalInfoForm layout with new CSS classes for improved styling and structure

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,8 @@
 .app-container {
   display: flex;
   gap: 2rem;
+  max-width: 1450px;
+    margin: 2rem auto;
 }
 
 .form-container {
@@ -31,4 +33,17 @@
   background-color: #cb1717;
   color: white;
   font-size: larger;
+}
+
+/* styles for the personal info form */
+.personal-form{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.form-field {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
 }
