--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
   display: flex;
   gap: 2rem;
   max-width: 1450px;
-    margin: 2rem auto;
+  margin: 2rem auto;
 }
 
 .form-container {
@@ -36,14 +36,20 @@
 }
 
 /* styles for the personal info form */
-.personal-form{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .form-field {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
+
+.form-label {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+/* styles for the skills form */
