--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,6 +3,7 @@
   gap: 2rem;
   max-width: 1450px;
   margin: 2rem auto;
+  padding: 0 1rem;
 }
 
 .form-container {
@@ -94,7 +95,7 @@
 }
 
 /* Template Selection*/
-.template-selection-container{
+.template-selection-container {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -114,6 +115,29 @@
   object-fit: contain;
   display: block;
   margin: 0 auto;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.template-image:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.template-image:hover {
+  cursor: pointer;
+}
+
+.template-image-details {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0.25rem;
+  align-items: center;
+}
+
+.preview-image {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
