--- a/src/components/App.css
+++ b/src/components/App.css
@@ -150,18 +150,6 @@ body {
   cursor: pointer;
 }
 
-@media (max-width: 768px) {
-  .template-selection {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .template-image {
-    max-width: 150px;
-    margin: 0;
-  }
-}
-
-
 /* Selection Homepage */
 .selection-homepage{
   display: flex;
@@ -178,4 +166,78 @@ body {
   text-align: center;
   margin-top: 1rem;
   padding: 3rem 0;
+}
+
+/* Selection Homepage */
+.selection-homepage {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+/* Resume render */
+.resume-container {
+  flex: 1;
+}
+
+.no-resume-text {
+  text-align: center;
+  margin-top: 1rem;
+  padding: 3rem 0;
+}
+
+/* Resume Choice */
+.resume-choice-container {
+  width: 100%;
+  display: flex;
+  gap: 4rem;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.choice {
+  width: clamp(15rem, 30vw, 40rem);
+  height: clamp(15rem, 30vw, 40rem);
+  border: 2px dashed #ccc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.choice:hover {
+  cursor: pointer;
+  transform: translateY(-3px);
+  box-shadow: 0;
+}
+
+.choice:hover * {
+  color: grey;
+}
+
+.choice img{
+  max-width: 30px;
+  margin: 0;
+}
+
+.choice p{
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .template-selection {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .template-image {
+    max-width: 150px;
+    margin: 0;
+  }
+  .resume-choice-container {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
