--- a/src/components/App.css
+++ b/src/components/App.css
@@ -246,16 +246,43 @@ body {
 }
 
 /* Resume Thumbnail*/
+.resume-selection {
+  display: flex;
+  width: 100%;
+  gap: 2rem;
+}
+
+.resume-card{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem
+}
+
+.resume-details{
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 10px;
+}
+
 .resume-thumbnail-image {
   width: 100%;
-  max-width: 100px;
   min-width: 100px;
   height: 200px;
   object-fit: contain;
   display: block;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  border: 1px solid #ccc;
 }
 
-.resume-name{
+.resume-thumbnail-image:hover {
+  transform: translateY(-3px);
+  box-shadow: 0;
+  cursor: pointer;
+}
+
+.resume-name {
   outline: none;
   display: inline-block;
   padding: 2px 6px;
@@ -264,10 +291,10 @@ body {
   border-radius: 5px;
 }
 
-.resume-name:hover{
+.resume-name:hover {
   border: 1px solid #ccc;
 }
 
-.resume-name:focus{
+.resume-name:focus {
   border: 2px solid blue;
 }
