--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+p{
+  margin: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -162,7 +166,6 @@ body {
 
 /* Resume render */
 .resume-container {
-  flex: 1;
 }
 
 .no-resume-text {
@@ -176,11 +179,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 3rem;
-}
-
-/* Resume render */
-.resume-container {
-  flex: 1;
 }
 
 .no-resume-text {
@@ -260,10 +258,14 @@ body {
 
 .resume-details{
   display: flex;
-  gap: 1rem;
   justify-content: space-between;
-  align-items: center;
-  padding-right: 10px;
+  gap: 1rem;
+}
+
+.resume-info{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .resume-thumbnail-image {
@@ -284,11 +286,14 @@ body {
 
 .resume-name {
   outline: none;
-  display: inline-block;
+  width: max-content;
   padding: 2px 6px;
   padding-right: 10px;
   margin: 0;
   border-radius: 5px;
+}
+.resume-edit-date{
+  padding-left: 6px;
 }
 
 .resume-name:hover {
