--- a/src/components/App.css
+++ b/src/components/App.css
@@ -124,6 +124,12 @@ body {
   gap: 1rem;
 }
 
+.template-image-container{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
 .template-image {
   width: 100%;
   max-width: 250px;
@@ -253,7 +259,7 @@ body {
 .resume-card{
   display: flex;
   flex-direction: column;
-  gap: 1rem
+  gap: 0.5rem
 }
 
 .resume-details{
@@ -302,4 +308,18 @@ body {
 
 .resume-name:focus {
   border: 2px solid blue;
+}
+
+.delete-resume{
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.delete-resume-image{
+  max-width: 20px;
+  margin: 0;
+  background: none;
 }
