--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-p{
+p {
   margin: 0;
 }
 
@@ -124,7 +124,7 @@ body {
   gap: 1rem;
 }
 
-.template-image-container{
+.template-image-container {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -256,19 +256,19 @@ body {
   gap: 2rem;
 }
 
-.resume-card{
+.resume-card {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem
+  gap: 0.5rem;
 }
 
-.resume-details{
+.resume-details {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
 }
 
-.resume-info{
+.resume-info {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -298,21 +298,21 @@ body {
   padding-right: 10px;
   margin: 0;
   border-radius: 5px;
+  cursor: pointer;
 }
-.resume-edit-date{
+.resume-edit-date {
   padding-left: 6px;
 }
 
 .resume-name:hover {
   border: 1px solid #ccc;
-  cursor: pointer;
 }
 
 .resume-name:focus {
   border: 2px solid blue;
 }
 
-.delete-resume{
+.delete-resume {
   border: none;
   background: none;
   padding: 0;
@@ -320,21 +320,21 @@ body {
   cursor: pointer;
 }
 
-.delete-resume-image{
+.delete-resume-image {
   max-width: 20px;
   margin: 0;
   background: none;
 }
 
 /* Main editing page styles */
-.editing-page{
+.editing-page {
   flex: 1;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
-.main{
+.main {
   display: flex;
   gap: 2rem;
 }
@@ -373,4 +373,30 @@ body {
 .nav-button img {
   width: 20px;
   height: 20px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.left-nav,
+.right-nav,
+.saving-container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.saving-container {
+  gap: 0.25rem;
+}
+
+.edit-page-resume-name {
+  padding-left: 6px;
+  padding-right: 10px;
+  font-size: x-large;
+  font-weight: bold;
+  cursor: pointer;
 }
