--- a/src/components/App.css
+++ b/src/components/App.css
@@ -40,10 +40,10 @@ body {
 }
 
 .expanded-template {
+  border: 2px solid #cb1717;
   z-index: 1000;
   width: 90vw;
   height: 90vh;
-  border: none;
   background: white;
   padding: 1rem;
   overflow-y: auto;
@@ -77,6 +77,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 2rem;
 }
 
 /* styles for the forms */
@@ -416,4 +417,11 @@ body {
   border: none;
   cursor: pointer;
   outline: none;
+}
+
+.entry-summary{
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: space-between;
 }
