--- a/src/components/App.css
+++ b/src/components/App.css
@@ -288,7 +288,7 @@ body {
 
 .resume-thumbnail-image:hover {
   transform: translateY(-3px);
-  box-shadow: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
 
