--- a/src/components/App.css
+++ b/src/components/App.css
@@ -99,7 +99,7 @@ body {
   padding: 0.5rem 1rem;
   border-radius: 5px;
   border: 0.5px solid;
-  font-size: larger;
+  font-size: large;
   max-width: 100%;
 }
 
@@ -110,11 +110,12 @@ body {
 
 textarea{
   max-width: 100%;
-  height: max-content;
+  min-height: 3rem;
   padding: 0.5rem 1rem;
   border-radius: 5px;
   border: 0.5px solid;
-  font-size: larger;
+  font-size: large;
+  field-sizing: content;
 }
 /* styles for the experience form */
 .no-value-container {
