Improved the drag drop experience.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -577,7 +577,7 @@ textarea {
 
 /* Drag and drop effect*/
 .placeholder {
-  border: 1px solid #cccccc;
+  border: 1px solid #882e2e;
   border-radius: 3px;
 }
 
