--- a/src/components/App.css
+++ b/src/components/App.css
@@ -476,6 +476,11 @@ textarea {
   outline: none;
 }
 
+.entry-summary-container{
+  margin: 0;
+  padding: 0;
+}
+
 .entry-summary {
   display: flex;
   gap: 0.5rem;
