--- a/src/components/App.css
+++ b/src/components/App.css
@@ -72,13 +72,6 @@ body {
   transform: translate(-50%, -50%);
 }
 
-@media (max-width: 500px) {
-  .preview-template {
-    width: 60vw;
-    height: 80vw;
-  }
-}
-
 .preview-template img {
   width: 100%;
   height: 100%;
@@ -136,7 +129,8 @@ body {
   border-radius: 5px;
   border: 0.5px solid;
   font-size: medium;
-  width: max-content;
+  min-width: 12rem;
+  field-sizing: content;
 }
 
 .form-label {
@@ -291,21 +285,6 @@ textarea {
 
 .choice p {
   margin: 0;
-}
-
-@media (max-width: 768px) {
-  .template-selection {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .template-image {
-    max-width: 150px;
-    margin: 0;
-  }
-  .resume-choice-container {
-    flex-direction: column;
-    justify-content: center;
-  }
 }
 
 /* Resume Thumbnail*/
@@ -476,7 +455,7 @@ textarea {
   outline: none;
 }
 
-.entry-summary-container{
+.entry-summary-container {
   margin: 0;
   padding: 0;
 }
@@ -549,8 +528,7 @@ textarea {
   gap: 1rem;
 }
 
-
-.preview-resume-button-container{
+.preview-resume-button-container {
   position: absolute;
   bottom: -10%;
   left: 0;
@@ -561,7 +539,7 @@ textarea {
   gap: 1rem;
 }
 
-.preview-resume-button{
+.preview-resume-button {
   border: none;
   height: 70px;
   width: 70px;
@@ -571,14 +549,14 @@ textarea {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.preview-resume-button-image{
+.preview-resume-button-image {
   max-width: 30px;
   margin: 0 auto;
 }
 
-.preview-resume-button:hover{
+.preview-resume-button:hover {
   transform: translateY(-3px);
-  box-shadow: 0 
+  box-shadow: 0;
 }
 
 /* Drag and drop effect*/
@@ -587,7 +565,7 @@ textarea {
   border-radius: 3px;
 }
 
-.entry-summary:active{
+.entry-summary:active {
   cursor: grabbing;
 }
 
@@ -601,6 +579,56 @@ textarea {
   background-color: inherit;
 }
 
-.drag-resume-image{
+.drag-resume-image {
   max-width: 20px;
+}
+
+@media (max-width: 500px) {
+  .preview-template {
+    width: 60vw;
+    height: 80vw;
+  }
+}
+
+@media (max-width: 768px) {
+  .template-selection {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .template-image {
+    max-width: 150px;
+    margin: 0;
+  }
+  .resume-choice-container {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .template-container {
+    display: none;
+  }
+
+  .form-container {
+    flex: 1;
+  }
+}
+
+@media (max-width: 530px) {
+  .nav {
+    display: none;
+  }
+  .form-field > input {
+    min-width: 8rem;
+  }
+}
+
+@media (max-width: 390px) {
+  .tab-nav {
+    flex-direction: column;
+  }
+
+  .form-field > input {
+    min-width: 6rem;
+  }
+
 }
