--- a/src/components/App.css
+++ b/src/components/App.css
@@ -395,6 +395,8 @@ textarea {
   }
 }
 
+/* Navigation */
+
 .nav-button {
   background: none;
   border: none;
@@ -415,6 +417,11 @@ textarea {
 .nav-button img {
   width: 20px;
   height: 20px;
+}
+
+.mobile-nav img{
+  width: 30px;
+  height: 30px;
 }
 
 .nav, .mobile-nav {
@@ -440,6 +447,26 @@ textarea {
 .menu-image{
   max-width: 30px;
   margin: 0 
+}
+
+.sidebar{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width:0;
+  transition: 0.5s ease-in-out;
+  overflow: hidden;
+  z-index: 1;
+  height: 100%;
+  background-color: #0fd812;
+}
+
+.sidebar-content{
+  padding: 1rem;
+}
+
+.show-sidebar{
+  width: 250px;
 }
 
 .left-nav,
