--- a/src/components/App.css
+++ b/src/components/App.css
@@ -463,10 +463,47 @@ textarea {
 
 .sidebar-content{
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.close-button{
+  display: block;
+  width: fit-content;
+  margin-left: auto;
 }
 
 .show-sidebar{
   width: 250px;
+}
+
+.sidebar-buttons-container{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
+.sidebar-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  cursor: pointer;
+  transition:  transform 0.3s ease;
+  background-color: yellow;
+  width: 10rem;
+}
+
+.sidebar-button:hover {
+  color: grey;
+  transform: translateY(-2px);
+}
+
+.sidebar-button img{
+  max-width: 20px;
+  margin: 0 
 }
 
 .left-nav,
