--- a/src/components/App.css
+++ b/src/components/App.css
@@ -472,6 +472,11 @@ textarea {
   display: block;
   width: fit-content;
   margin-left: auto;
+  transition: transform 0.3s ease;
+}
+
+.close-button:hover{
+  transform: translateY(-2px);
 }
 
 .show-sidebar{
