--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,6 +14,7 @@ body {
 
 .app-container {
   display: flex;
+  flex-direction: column;
   gap: 2rem;
   max-width: 1450px;
   margin: 0 auto;
@@ -673,6 +674,32 @@ textarea {
 
 .drag-resume-image {
   max-width: 20px;
+}
+
+/* Landing Page*/
+.main-page{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem
+}
+
+.features{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;;
+}
+
+.feature{
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  cursor: pointer
+}
+
+.lottie{
+  width: 100%;
+  max-width: 30px;
+  height: auto;
 }
 
 @media (max-width: 500px) {
