--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   --hover-colour: #f0f0f0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
@@ -224,10 +225,6 @@ textarea {
   gap: 3rem;
 }
 
-/* Resume render */
-.resume-container {
-}
-
 .no-resume-text {
   text-align: center;
   margin-top: 1rem;
@@ -249,9 +246,11 @@ textarea {
 
 /* Resume Choice */
 .resume-choice-container {
+  flex: 1;
   width: 100%;
   display: flex;
   gap: 4rem;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 1rem;
@@ -523,6 +522,10 @@ textarea {
   align-items: center;
 }
 
+.right-nav *{
+  font-size: clamp(1rem, 2rem, 1.5vw)
+}
+
 .saving-container {
   gap: 0.25rem;
 }
@@ -742,6 +745,7 @@ section {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 0;
 }
 
 .feature {
@@ -749,11 +753,13 @@ section {
   gap: 1rem;
   align-items: center;
   cursor: pointer;
+  font-size: clamp(1rem,2rem,calc(2vw + 3px));
 }
 
 .lottie {
   width: 100%;
-  max-width: 30px;
+  max-width: 50px;
+  min-width: 30px;
   height: auto;
 }
 
@@ -763,11 +769,17 @@ section {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  margin-top: 3rem;
 }
 
 .footer-links {
   display: flex;
   gap: 1rem;
+}
+
+.cta-container{
+  display: flex;
+  justify-content: center;
 }
 
 .footer-links a {
@@ -796,10 +808,6 @@ section {
   .template-image {
     max-width: 150px;
     margin: 0;
-  }
-  .resume-choice-container {
-    flex-direction: column;
-    justify-content: center;
   }
 
   .template-container {
