more css adjustments

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -711,17 +711,6 @@ section {
   margin:0;
   font-size: calc(9vw + 5px);
 }
-
-.cta-button{
-  max-width: fit-content;
-  border: none;
-  padding: 1rem 2rem;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: transform 0.3s ease, background-color 0.3s ease;
-  font-size: medium;
-}
-
 .section-title{
   margin:0;
   font-size: calc(5vw + 5px);
@@ -732,9 +721,22 @@ section {
   line-height: 1.5;
 }
 
+.cta-button{
+  background-color: rgb(0, 113, 227);
+  color: white;;
+  max-width: fit-content;
+  border: none;
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  font-size: medium;
+}
+
+
 .cta-button:hover {
   transform: translateY(-2px);
-  background-color: rgb(214, 211, 211);
+  background-color: rgb(0, 119, 237);
 }
 
 .cta-button:active {
